Bug 452818 - Vertical tabs puts pinned tabs horizontally
Summary: Vertical tabs puts pinned tabs horizontally
Status: CLOSED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: extensions (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Juraj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-21 06:46 UTC by 0BADC0DE
Modified: 2025-07-23 05:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.0
Sentry Crash Report:


Attachments
Partial screenshot of the Vertical tabs panel (16.19 KB, image/png)
2022-04-21 06:46 UTC, 0BADC0DE
Details
20 (unpinned) vertical tabs (11.92 KB, image/png)
2022-05-10 10:46 UTC, 0BADC0DE
Details
20 (unpinned ) vertical tabs within smaller screen estate (6.82 KB, image/png)
2022-05-10 10:48 UTC, 0BADC0DE
Details
Horizontally pinned vertical tabs (15.96 KB, image/png)
2022-05-23 08:45 UTC, 0BADC0DE
Details
Vivaldi vertical tabs (57.15 KB, image/png)
2022-05-23 09:52 UTC, 0BADC0DE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 0BADC0DE 2022-04-21 06:46:58 UTC
Created attachment 148278 [details]
Partial screenshot of the Vertical tabs panel

SUMMARY
***
I enabled vertical tabs extension and then pinned some tabs.
Their icons are arranged horizontally instead of vertically, thus making the extension actually useless.
***


STEPS TO REPRODUCE
1.  Enable Vertical Tabs extension (tab list, new tabs at the end, replacement)
2. Open three or four tabs
3. Pin them all

OBSERVED RESULT
Tabs icons are arranged horizontally

EXPECTED RESULT
Tabs icons (and text) are kept in vertical arrangement

SOFTWARE/OS VERSIONS
Windows: n/a
macOS:  n/a
Linux/KDE Plasma: 5.24.4
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 genghiskhan 2022-05-08 04:34:30 UTC
Isn't it the intended behaviour?
I find the current arrangement useful.
Comment 2 0BADC0DE 2022-05-09 12:47:36 UTC
I think that "vertical tabs" should mean ... one tab on top of the others. Default behaviours is already "horizontal tabs" which should mean ... one tab aside of the others.

Nope, I think this is just a bug.
Comment 3 genghiskhan 2022-05-09 13:23:59 UTC
I understand, but otherwize, the pinned tabs will consume more visual space.
The pinned tabs are icons when on the tab scrollbar, so it seems reasonable to have the pinned tabs horizontally.
Comment 4 0BADC0DE 2022-05-09 13:49:40 UTC
My pinned tabs would not consume any extra vertical space than unpinned tabs. 

Again, the feature is called "vertical tabs" and not "vertical tabs with horizontal pinned ones". Isn't it?
Comment 5 genghiskhan 2022-05-10 03:45:30 UTC
I agree on the descriptiob part. 
It should be updated accordingly.

How do you suggest to handle pinned tabs?
Please also consider the number of pinned tabs.

You have 3 pinned tabs. OK
You have 10 pinned tabs. Not OK as it would consume roughly 1/3 of space.
Comment 6 0BADC0DE 2022-05-10 10:46:53 UTC
Created attachment 148703 [details]
20 (unpinned) vertical tabs

If you need 20 vertical tabs, I presume you know that they could not fit vertically...
Comment 7 0BADC0DE 2022-05-10 10:48:19 UTC
Created attachment 148704 [details]
20 (unpinned ) vertical tabs within smaller screen estate

On the left you can see the tab scroller widget.
Comment 8 0BADC0DE 2022-05-10 10:59:06 UTC
Vertical tabs: arrange tabs vertically.

Horizontal tabs: arrange tabs horizontally.

Horizontal Pinned tabs are not arranged vertically. Are they?

"Pinned" status is not meant to affect widgets placement but rather its "stability" status.

Finally, @genghiskhan@gmx.ca, what's wrong with contents not fitting the screen area and requiring a scroller widget?
Comment 9 genghiskhan 2022-05-10 13:55:42 UTC
I've answered at https://bugs.kde.org/show_bug.cgi?id=453574

I see that settings allow to have custom CSS style.  Perhaps this is possible to change using a CSS file?
Comment 10 genghiskhan 2022-05-10 13:59:00 UTC
(In reply to EnzoR from comment #7)
> Created attachment 148704 [details]
> 20 (unpinned ) vertical tabs within smaller screen estate
> 
> On the left you can see the tab scroller widget.

Considering that pinned tabs are either frequent or WebApp tabs.
Yes, but it means that I need to scroll to the pinned tabs again and again, even if they are at the top.
What if I have over 50 or even 500 opened tabs?
I need these pinned ones to be accessible and fast.
Comment 11 0BADC0DE 2022-05-23 08:45:36 UTC
Created attachment 149135 [details]
Horizontally pinned vertical tabs

In case there is still any doubt, I am attaching a screenshot detailing the appearance of horizontally pinned "vertical tabs".

1. I cannot read the page titles, not even partially. Just the icons. If pinned vertically I could read at least the leading part of the title and I could scroll to read it all.

2. It is eating a fairly large amount of horizontal real estate. Exactly like with default horizontal tabs. It doesn't add any benefit, it makes the feature much less useful and defies the goals of the feature: saving horizontal screen real estate in landscape diplays.

3. Vivaldi is another browser that has vertical tabs and keeps them vertically arranged, no matter whether they are pinned or not. This way the feature makes always sense and achieves the goal.

So, it doesn't make any sense as it is now. Does it?
Comment 12 genghiskhan 2022-05-23 09:28:41 UTC
(In reply to EnzoR from comment #8)
> Vertical tabs: arrange tabs vertically.
> 
> Finally, @genghiskhan@gmx.ca, what's wrong with contents not fitting the
> screen area and requiring a scroller widget?

Please elaborate.  I didn't understand the question.
Comment 13 0BADC0DE 2022-05-23 09:52:51 UTC
Created attachment 149136 [details]
Vivaldi vertical tabs

(In reply to genghiskhan from comment #12)
> (In reply to EnzoR from comment #8)
> > Vertical tabs: arrange tabs vertically.
> > 
> > Finally, @genghiskhan@gmx.ca, what's wrong with contents not fitting the
> > screen area and requiring a scroller widget?
> 
> Please elaborate.  I didn't understand the question.

See newly attached screenshot. This is Vivaldi browser v5.
I have 15 tabs, arranged vertically inside the vertical tab on the left.
First 7 are pinned, cannot be closed and are placed in the topmost part of the vertical area.
Next 8 are unpinned, can be closed at any time and are vertically placed into the lower part of the same are.
I can see both the site favicon and the leading part of the title.
If I put 100 vertical tabs a vertical scrolling widget will be added, but no extra horizontal screen real estate is spent, even if I pin them all.
And everything is kept ... vertically.

I think I am not able to make it any clearer than this. Sorry.
Comment 14 0BADC0DE 2023-04-28 11:44:59 UTC
Any reasonable feedback on this?
As of today (v23.04.0), Vertical tabs is STILL pinning tabs horizontally.
If this is an intended feature, I would like to know the rational behind it, if any.
If it is not, then please mr/mrs Assignee, put any feedback here. For the sake of hope.
Comment 15 0BADC0DE 2023-04-28 12:07:59 UTC
I correct myself.
v23.04.0 is Falkon version.
v0.1.0 is "Vertical tabs" module version.
Comment 16 Juraj 2023-04-30 18:01:39 UTC
(In reply to EnzoR from comment #14)
> Any reasonable feedback on this?
> As of today (v23.04.0), Vertical tabs is STILL pinning tabs horizontally.
> If this is an intended feature, I would like to know the rational behind it,
> if any.
> If it is not, then please mr/mrs Assignee, put any feedback here. For the
> sake of hope.

My guess is that the "pinned tabs" feature is recycled code from browser pinned tabs feature.

As for reason why this was not implemented so far, Falkon development stalled for a while and now there is some progress made in many areas (as can be seen in changelog), as for this feature I did not work on it and I did not see any patch.
Comment 17 0BADC0DE 2024-03-29 07:42:55 UTC
(In reply to Juraj from comment #16)
> My guess is that the "pinned tabs" feature is recycled code from browser
> pinned tabs feature.

This IS the "pinned tabs" feature and it needs to be re-used (more than re-cycled).
I think that it simply uses hard-coded or implicit orientation information.
Which is also seen in other places, like in https://bugs.kde.org/show_bug.cgi?id=480592 .

IMHO the rationale for this could be that nowadays available horizontal room is more than the vertical one. So putting bars vertically can leave more vertical room for contents. At least this is why I use vertical bars.
Comment 18 Bug Janitor Service 2024-08-11 18:31:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/81
Comment 19 Juraj 2024-08-18 18:55:18 UTC
Git commit 95b1f3ce3c983656be4e0a6e4e29b90e2f422c8e by Juraj Oravec.
Committed on 18/08/2024 at 18:46.
Pushed by jurajo into branch 'master'.

VerticalTabs: Arrange pinned tabs vertically
FIXED-IN: 24.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +31   -28   src/plugins/VerticalTabs/tablistdelegate.cpp
M  +2    -0    src/plugins/VerticalTabs/tablistdelegate.h
M  +12   -4    src/plugins/VerticalTabs/tablistview.cpp

https://invent.kde.org/network/falkon/-/commit/95b1f3ce3c983656be4e0a6e4e29b90e2f422c8e
Comment 20 0BADC0DE 2025-07-23 05:55:08 UTC
Confirmed it now works as of 25.04.3.