VerticalTabs: Arrange pinned tabs vertically

BUG: 452818
FIXED-IN: 24.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>